--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -9,7 +9,7 @@ jobs:
 
     strategy: 
       matrix:
-        board: [dedede, octopus, coral, grunt, nissa, zork, corsola, jacuzzi, hatch]
+        board: [dedede, octopus, coral, grunt, nissa, zork, corsola, jacuzzi, hatch, hana]
 
     runs-on: ubuntu-latest
     steps:
